@@ -9,6 +9,10 @@
 	* src/server/exmpp_server_binding.erl (error): Add the
 	`not-authorized' case.
 
+	* src/core/exmpp_stream.erl, src/server/exmpp_server_stream.erl,
+	src/client/exmpp_client_stream.erl: Add helpers to access common
+	attributes.
+
 2007-05-15  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/server/exmpp_server_compression.erl (methods_list2),
